--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ bin/*
 
 # VSCode
 .vscode/*
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
